--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,46 @@ h2 {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+@media only screen and (max-width: 1340px) {
+    #characterimg {
+        margin-bottom: 20px;
+    }
+
+    .charactercontent {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 1211px) {
+    #characterimg {
+        margin-bottom: 60px;
+    }
+}
+
+@media only screen and (max-width: 1090px) {
+    #characterimg {
+        margin-bottom: 20px;
+        margin-left: 0px;
+    }
+
+    .charactercontent {
+        width: 70%;
+        margin-left: 0px;
+    }
+
+    .contentbackground {
+        height: 1200px;
+    }
+}
+
+
+@media only screen and (max-width: 750px) {
+    #characterimg {
+        width: 60%;
+    }
+
+    .contentbackground {
+        height: 1500px;
+    }
+}
